add no38NSe1ks.md and its subcategories